# CacheBar

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: RELEASE.md
scripts/: github-release.sh  install.sh  print-dmg-sha256.sh  push-homebrew-tap.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  tray_icon.rs
src-tauri/src/core/: analyse.rs  clean.rs  mod.rs  optimize.rs  status.rs  uninstall.rs
